<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginEnd="@dimen/len_20"
        android:layout_marginBottom="@dimen/len_20"
        app:cardCornerRadius="@dimen/len_10"
        app:cardElevation="@dimen/len_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/len_20">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_goods_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/goods_name"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_goods_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/len_100"
                    android:gravity="top"
                    android:hint="@string/goods_description"
                    android:inputType="textMultiLine"
                    android:maxLines="4" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/seek_place"
                    android:inputType="text"
                    android:maxLines="4" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_10"
                android:layout_marginBottom="@dimen/len_10"
                android:text="@string/goods_image" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="@dimen/len_128"
                android:layout_height="@dimen/len_128"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>