<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/iv_login_bg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_login_bg"
        android:contentDescription="@string/app_name" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/len_20"
        android:elevation="@dimen/len_8"
        android:src="@drawable/ic_logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_login_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="lollipop" />

    <!--手机号-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginTop="@dimen/len_20"
        android:layout_marginEnd="@dimen/len_20"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_bg">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:text="123123"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <!--密码-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/til_account">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="123123"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/len_28"
        android:background="@drawable/white_round_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/len_10"
        android:text="@string/register_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</android.support.constraint.ConstraintLayout>
