<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/len_10">

        <ImageView
            android:layout_width="@dimen/len_20"
            android:layout_height="@dimen/len_20"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_history" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:text="@string/history"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"/>

    <TextView
        android:id="@+id/tv_clear_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:background="@drawable/ripple_bg"
        android:padding="@dimen/len_10"
        android:text="@string/clear_history" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>